@@ -1,22 +1,13 @@
 [tox]
 envlist =
     lint,
-    py35,
     py36,
     py37,
     py38,
+    py39,
     pypy3
 
 [testenv]
-# Most of these are defaults but if you specify any you can't fall back
-# to defaults for others.
-basepython =
-    py35: python3.5
-    py36: python3.6
-    py37: python3.7
-    py38: python3.8
-    pypy3: pypy3
-    py3: python3.8
 usedevelop = true
 passenv = DISPLAY WEBDRIVER TRAVIS URL WAITTOSTART CONTAINERTZ
 whitelist_externals = tox.sh
@@ -27,7 +18,7 @@ deps =
     docker
 
 [testenv:lint]
-basepython = python3.8
+basepython = python3.9
 commands =
     flake8 deformdemo setup.py
     isort --check-only --diff deformdemo setup.py
@@ -36,11 +27,10 @@ commands =
     check-manifest
 extras =
     lint
-deps =
 
 [testenv:format]
 skip_install = true
-basepython = python3.8
+basepython = python3.9
 commands =
     isort deformdemo setup.py
     black deformdemo setup.py
